--- a/index.html
+++ b/index.html
@@ -50,7 +50,6 @@
         <div id="lead-content">
             <h1>Portfolio</h1>
             <h2>Kim Joon Woo</h2>
-            <a href="#" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
 
@@ -73,9 +72,11 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        을지대학교 의료 IT 전산학과 졸업. 
-			    모비젠
+                        을지대학교 의료 IT 전산학과 졸업.
                     </p>
+		    <p>
+			Big Data Solution 및 SI 기업 모비젠 근무 (4년차)
+		    </p>
                 </div>
             </div>
         </div>
@@ -85,20 +86,28 @@
     <div id="experience" class="background-alt">
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
+            <div data-date="March 2017 – December 2017">
+                <h3>Java Web 교육</h3>
+                <h4>Web 프로젝트 교육</h4>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-                </p>
+                    Swing 기반 Java 어플리케이션 개발 및 Spring 기반 Web 프로젝트 교육
+		    Swing 기반의 카페 포트기 개발
+		    Spring 기반의 Web 페이지 개발
+		</p>
             </div>
 
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-                </p>
+            <div data-date="May 2018 – December 2019">
+                <h3>SKT 작업권한제어 프로젝트</h3>
+                <h4></h4>
+                <p>ㆍ요구사항정의 및 관련 커뮤니케이션 실무                         </p>
+		<p>ㆍ화면설계서(Storyboard) 작성 및 화면설계서를 토대로 요구사항확인    </p>
+		<p>ㆍ내부용 WBS 작성                                         </p>
+		<p>ㆍ작업권한제어를 위한 input/output 데이터 ETL 로직 개발         </p>
+		<p>ㆍRabbit MQ를 통해 실제 작업할 시스템과 작업 연동               </p>
+		<p>ㆍ단위시스템별 Front & Back-end 테스트 작업                  </p>
+		<p>ㆍ디버깅 진행 후 오류사항 정리 후 전달                          </p>
+		<p>ㆍ사용자매뉴얼 작성(관리자, 사용자)ㆍ매뉴얼 작성(관리자, 사용자)      </p>
+		<p>ㆍ서버, 프로세스 상태 및 로그 감시 프로세스 모듈 개발 </p>	
             </div>
 
             <div data-date="September 2015 – September 2016">
