--- a/index.html
+++ b/index.html
@@ -86,6 +86,13 @@
     <div id="experience" class="background-alt">
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
+	    <div data-date="March 2012 – February 2018">
+                <h3>을지대학교 재학</h3>
+                <h4>의료IT전산학과(4년) </h4>
+                <p>
+                   을지대학교 의료 IT 전산학과에서 Java 코딩 및 자료구조, 시스템 등의 기초 학습
+		</p>
+            </div>
             <div data-date="March 2017 – December 2017">
                 <h3>Java Web 교육</h3>
                 <h4>Web 프로젝트 교육</h4>
@@ -96,27 +103,13 @@
 		</p>
             </div>
 
-            <div data-date="May 2018 – December 2019">
-                <h3>SKT 작업권한제어 프로젝트</h3>
-                <h4></h4>
-                <p>ㆍ요구사항정의 및 관련 커뮤니케이션 실무                         </p>
-		<p>ㆍ화면설계서(Storyboard) 작성 및 화면설계서를 토대로 요구사항확인    </p>
-		<p>ㆍ내부용 WBS 작성                                         </p>
-		<p>ㆍ작업권한제어를 위한 input/output 데이터 ETL 로직 개발         </p>
-		<p>ㆍRabbit MQ를 통해 실제 작업할 시스템과 작업 연동               </p>
-		<p>ㆍ단위시스템별 Front & Back-end 테스트 작업                  </p>
-		<p>ㆍ디버깅 진행 후 오류사항 정리 후 전달                          </p>
-		<p>ㆍ사용자매뉴얼 작성(관리자, 사용자)ㆍ매뉴얼 작성(관리자, 사용자)      </p>
-		<p>ㆍ서버, 프로세스 상태 및 로그 감시 프로세스 모듈 개발 </p>	
-            </div>
-
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-                </p>
-            </div>
+            <div data-date="May 2018 – May 2021">
+                <h3>모비젠 입사</h3>
+                <h4>DX 개발2팀 (재직중)</h4>
+                    <p>
+			    Big Data Solution 기업 모비젠에서 서버 개발자 로서 역량 향상
+		    </p>
+		</div>
         </div>
     </div>
     <!-- End #experience -->
